# rosa-os

./: Cargo.toml  README.md  build.rs  configure.sh
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  lib.rs  main.rs
src/: main.rs
