[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader_api = "0.11.5"
conquer-once = { version = "0.4.0", default-features = false }
log = "0.4.20"
printk = "0.3.2"
lazy_static = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
x86_64 = "0.14.11"
pic8259 = "0.10.4"
spin = "0.9.8"


